--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,8 @@
         <activity android:name=".ui.ScoreActivity"></activity>
         <activity android:name=".ui.ToDoActivity"></activity>
         <activity android:name=".ui.SettingActivity"></activity>
+        <activity android:name=".ui.PointRankListActivity"></activity>
+        <activity android:name=".ui.SearchActivity"></activity>
     </application>
 
 </manifest>
