封装MVVM框架，使用协程替换RXjava做线程切换

--- a/oapp/src/main/AndroidManifest.xml
+++ b/oapp/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name=".ui.CommonActivity" android:launchMode="singleTask"/>
         <activity android:name=".ui.LoginActivity" android:launchMode="singleTask"/>
         <activity android:name=".ui.RegisterActivity" android:launchMode="singleTask"/>
+        <activity android:name=".ui.RankListActivity" android:launchMode="singleTask"/>
     </application>
 
 </manifest>
