--- a/oapp/build.gradle
+++ b/oapp/build.gradle
@@ -1,3 +1,4 @@
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
@@ -16,6 +17,9 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled  true
+    }
+    dataBinding{
+        enabled = true
     }
 
     buildTypes {
@@ -49,9 +53,9 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitSdkVersion"
     //OKHttp打印日志
     implementation "com.squareup.okhttp3:logging-interceptor:3.11.0"
-    //RxJava
-    implementation "com.squareup.retrofit2:retrofit:2.2.2"
-    implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
+//    //RxJava
+//    implementation "com.squareup.retrofit2:retrofit:2.2.2"
+   implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
     //EventBus
     implementation "org.greenrobot:eventbus:3.1.1"
     //BRAVE
@@ -73,4 +77,14 @@ dependencies {
     implementation "com.android.support:multidex:1.0.3"
     //material-dialogs   选择主题颜色对话框
     implementation "com.afollestad.material-dialogs:commons:0.9.4.4"
+    //lifecycle
+    api 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0'
+    api 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
+    api 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    // viewModel
+    api "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    api "androidx.fragment:fragment-ktx:1.2.5"
+    // liveData
+    api "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+    api 'com.kunminx.archi:unpeek-livedata:4.4.1-beta1'
 }
