--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,6 @@ dependencies {
     implementation "com.android.support:multidex:1.0.3"
     //material-dialogs   选择主题颜色对话框
     implementation "com.afollestad.material-dialogs:commons:0.9.4.4"
+    //崩溃页
+    implementation 'cat.ereza:customactivityoncrash:2.3.0'
 }
