--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,12 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://repo1.maven.org/maven2/' }//umeng
 
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
@@ -23,6 +22,7 @@ allprojects {
         maven {
             url "https://jitpack.io"
         }
+        maven { url 'https://repo1.maven.org/maven2/' }//umeng
 
     }
 }
