--- a/oapp/build.gradle
+++ b/oapp/build.gradle
@@ -104,4 +104,12 @@ dependencies {
 //    implementation "com.afollestad.material-dialogs:bottomsheets:3.3.0"
     //material-dialogs   选择主题颜色对话框
     implementation "com.afollestad.material-dialogs:commons:0.9.4.4"
+    //崩溃页
+    implementation 'cat.ereza:customactivityoncrash:2.3.0'
+    //友盟日志分析
+    // https://mobile.umeng.com/platform/config/apps/610b591226e9627944b70421/appKey?platform=android&isgame=false
+    implementation  'com.umeng.umsdk:common:9.4.0'// 必选
+    implementation  'com.umeng.umsdk:asms:1.2.3'// 必选
+    implementation 'com.umeng.umsdk:apm:1.4.0' // 错误分析升级为独立SDK，看crash数据请一定集成，可选
+
 }
