--- a/oapp/src/main/AndroidManifest.xml
+++ b/oapp/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+    <uses-sdk android:minSdkVersion="8"></uses-sdk>
+
+
 
     <application
         android:name=".MyApp"
@@ -43,6 +46,7 @@
         <activity android:name=".ui.ToDoActivity" android:launchMode="singleTask"/>
         <activity android:name=".ui.SettingActivity" android:launchMode="singleTask"/>
         <activity android:name=".ui.KnowledgeActivity" android:launchMode="singleTask"/>
+        <activity android:name=".ui.ErrorActivity" android:launchMode="singleTask"/>
     </application>
 
 </manifest>
