--- a/verticaltablayout/build.gradle
+++ b/verticaltablayout/build.gradle
@@ -16,9 +16,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     lintOptions {
         disable 'RestrictedApi'
+        checkReleaseBuilds false
+        abortOnError false
     }
+
 }
 
 dependencies {
